<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WelcomActivity!</string>
    <string name="app_name">GO-Reminder_v2.0</string>
    <string name="select_loc">Select Location</string>
    <string name="back_str">Back</string>
    <string name="view_memo_str">View Memos</string>
    <string name="map_mode">Pan/Zoom Mode</string>
    <string name="tag_str">Tag friends</string>
    <string name="empty_str"></string>
    <string name="welcom_str">Welcome to GO-Reminder!</string>
    <string name="name_str">Name</string>
    <string name="desc_str">Description</string>
    <string name="subject_str">Subject</string>
    <string name="save_str">Save</string>
    <string name="cat_shop_str">Shop</string>
    <string name="cat_family_str">Family</string>
    <string name="cat_work_str">Work</string>
    <string name="cat_friends_str">Friends</string>
    <string name="cat_other_str">Other</string>
    <string name="save_loc_str">Save Location</string>
    <string name="enable_date_time">Enable set Date &amp; Time</string>
    <string name="enable_location">Enable set \"Location\"</string>
    <string name="date_str">Date:</string>
    <string name="time_str">Time:</string>
    <string name="exmpl_date_str">01/01/2012</string>
    <string name="exmpl_time_str">12:00am</string>
    <string name="loc_should_appear_str">Selected location will appear here</string>
    <string name="change_loc_str">Change Location</string>
    <string name="search_str">Search</string>
    <string name="tag_frnds_str">Tag friends</string>
    <string name="contacts_str">Friends to share</string>
    <string name="send_str">Send</string>
    <string name="close_str">Close</string>
    <string name="cancel_str">Cancel</string>
    <string name="click_on_button_str">Click on the button to select Reminder Location</string>
    <string name="gps_query_time_str">GPS Query Interval</string>
    <string name="gps_query_distance">GPS min change difference</string>
    <string name="website">Visit www.go-reminder.com</string>
    <string name="introduction_str">GO-Reminder is a geo-location based task reminder. Which enables ther user to create memos linked with geo-locations. User will be reminded or the task when he approaches near the location.</string>
    <string name="abt_online_str">This icon is shown when GPS is active and the service is online.</string>
    <string name="abt_at_location_str">This icon is shown when the user is near a location which is linked with a task in the list. User can find the task by expanding the notification list.</string>
    <string name="abt_app_name_str">About GO-Reminder...</string>
    <string name="tag_frnds_abt_str">Send a SMS to your friends, telling about this location.</string>
    <string name="save_loc_abt_str">Save the locations in a organizer which will help you to organize neatly the known locations to you.</string>
    <string name="create_memo_str">Create Memo</string>
    <string name="create_memo_abt_str">Create a memo, set date and timer and/or location as you need. Application will take care of reminding you.</string>
    <string name="menu_view_memo_search_str">Search Memos</string>
    <string name="menu_view_memo_delete_all">Clear All</string>
    <color name="light_gray">#b0b0b0</color>
    <string name="view_memo_search_dialog_search_term_str">"Search "</string>
    <color name="black">#000000</color>
    <string name="welcome_activity_app_description_str">GO-Reminder is a geo-location based task reminder. Specify your task and the location. And GO-Reminder will take care of the rest.</string>
    <string name="welcome_activity_take_a_tour_str">Take a tour</string>
    <string name="welcome_activity_loc_org">Location Organizer</string>
    <string name="welcome_activity_my_location_str">My Current Location</string>
    <color name="gor_green">#004217</color>
    <color name="dark_gray">#a0a0a0</color>
    <string name="welcom_activity_status_str">Current Status</string>
    <string name="about_activity_next_str">Next Page</string>
    <color name="white">#ffffff</color>
    <color name="current_status_sub_text">#d0d0d0</color>

</resources>