<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_frnds_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_frnds_abt_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <MultiAutoCompleteTextView
        android:id="@+id/friends_multi_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str" >

        <requestFocus />
    </MultiAutoCompleteTextView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/descET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/locTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc_should_appear_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_str"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_gray" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/sendB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_str" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

</TableLayout>